--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,6 +21,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+
     - name: Set up Apache Maven Central
       uses: actions/setup-java@v4
       with: # running setup-java again overwrites the settings.xml
@@ -31,11 +34,6 @@ jobs:
         server-password: ${{ secrets.OSSRH_TOKEN }} # env variable for token in deploy
         gpg-private-key: ${{ secrets.GPG_SECRET }} # Value of the GPG private key to import
         gpg-passphrase: ${{ secrets.GPG_PASSWORD }} # env variable for GPG private key passphrase
-
-
-    - name: Build with Maven
-      run: mvn clean install -P release -f pom.xml
-
 
     - name: Publish to Apache Maven Central
       run: mvn deploy -P release -f pom.xml
