--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -29,11 +29,11 @@ jobs:
       with: # running setup-java again overwrites the settings.xml
         distribution: 'temurin'
         java-version: '17'
-        server-id: maven # Value of the distributionManagement/repository/id field of the pom.xml
-        server-username: ${{ secrets.OSSRH_USERNAME }} # env variable for username in deploy
-        server-password: ${{ secrets.OSSRH_TOKEN }} # env variable for token in deploy
+        server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
+        server-username: MAVEN_USERNAME # env variable for username in deploy
+        server-password: MAVEN_CENTRAL_TOKEN # env variable for token in deploy
         gpg-private-key: ${{ secrets.GPG_SECRET }} # Value of the GPG private key to import
-        gpg-passphrase: ${{ secrets.GPG_PASSWORD }} # env variable for GPG private key passphrase
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
 
     - name: Publish to Apache Maven Central
       run: mvn deploy -P release -f pom.xml
